CloudAlpacas-repo/salesforce/main/default/objects/Fan_Activity_Pattern__c/Fan_Activity_Pattern__c.object-meta.xml
<CustomObject>
    <description>팬의 시즌별 관람 횟수, 관람률, 굿즈 구매 횟수 및 총 구매금액을 집계하여 활동 패턴을 관리</description>
    <label>Fan Activity Pattern</label>
    <nameField>
        <displayFormat>FAP-{0000}</displayFormat>
        <label>Pattern Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fan Activity Patterns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>