CloudAlpacas-repo/salesforce/main/default/objects/Fan_Activity_Pattern__c/fields/Attendance_Rate__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Rate__c</fullName>
    <description>해당 시즌의 실제 진행 경기 수 대비 팬의 관람 경기 수 비율을 자동 계산</description>
    <formula>IF(
    OR(
        ISBLANK(Season__c),
        Season__r.Played_Games__c = 0
    ),
    0,
    BLANKVALUE(Games_Attended__c, 0) /
    Season__r.Played_Games__c
)</formula>
    <inlineHelpText>관람 경기 수를 시즌의 실제 진행 경기 수로 나눈 비율</inlineHelpText>
    <label>Attendance Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>