CloudAlpacas-repo/salesforce/main/default/objects/Fan_Activity_Pattern__c/fields/Games_Attended__c.field-meta.xml
<CustomField>
    <fullName>Games_Attended__c</fullName>
    <description>경기를 실제로 본 횟수</description>
    <inlineHelpText>경기를 실제로 본 횟수</inlineHelpText>
    <label>Games Attended</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>