CloudAlpacas-repo/salesforce/main/default/objects/Fan_Activity_Pattern__c/fields/Goods_Purchases__c.field-meta.xml
<CustomField>
    <fullName>Goods_Purchases__c</fullName>
    <description>해당 시즌 동안 팬이 구매한 굿즈 주문 건수를 집계</description>
    <inlineHelpText>해당 시즌에 팬이 구매한 굿즈 주문 건수</inlineHelpText>
    <label>Goods Purchases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>