CloudAlpacas-repo/salesforce/main/default/objects/Fan_Activity_Pattern__c/fields/Total_Spend__c.field-meta.xml
<CustomField>
    <fullName>Total_Spend__c</fullName>
    <description>해당 시즌에 팬이 지출한 총금액을 기록(환불 또는 취소된 주문은 집계에서 제외함)</description>
    <inlineHelpText>해당 시즌에 팬이 지출한 총금액을 기록(환불 또는 취소된 주문은 집계에서 제외함)</inlineHelpText>
    <label>Total Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>